MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/UnitEvent__e.object-meta.xml
<CustomObject>
    <label>Unit Event</label>
    <pluralLabel>Unit Events</pluralLabel>
</CustomObject>