MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>