MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Basement_Area__c.field-meta.xml
<CustomField>
    <fullName>Basement_Area__c</fullName>
    <label>Basement Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>