MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <label>Currency ISO Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>