MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Drivers_Room_Area__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Room_Area__c</fullName>
    <label>Drivers Room Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>