MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>