MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/First_Floor_Area__c.field-meta.xml
<CustomField>
    <fullName>First_Floor_Area__c</fullName>
    <label>First Floor Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>