MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Ground_Floor_Parking_Area__c.field-meta.xml
<CustomField>
    <fullName>Ground_Floor_Parking_Area__c</fullName>
    <label>Ground Floor Parking Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>