MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Internal_Area__c.field-meta.xml
<CustomField>
    <fullName>Internal_Area__c</fullName>
    <label>Internal Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>