MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>