MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Maid_Room_Count__c.field-meta.xml
<CustomField>
    <fullName>Maid_Room_Count__c</fullName>
    <label>Maid Room Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>