MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Number_of_Allocated_Parking__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Allocated_Parking__c</fullName>
    <label>Number of Allocated Parking</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>