MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Number_of_bathroom__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bathroom__c</fullName>
    <label>Number of bathroom</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>