MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Number_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bedrooms__c</fullName>
    <label>Number of Bedrooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>