MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>