MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Plot_No__c.field-meta.xml
<CustomField>
    <fullName>Plot_No__c</fullName>
    <label>Plot No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>