MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>