MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Unit_Classification__c.field-meta.xml
<CustomField>
    <fullName>Unit_Classification__c</fullName>
    <label>Unit Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>