MODON MRE BPDEV/force-app/main/default/objects/UnitEvent__e/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>